Update project files and smart home project page

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     </a>
                     <hr class="visible-xs">
                     <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.
-                        It is currently in development being built by myself using the Unity game engine.
+                        It is currently in development being made with the Unity game engine, and I am the sole developer.
                     </p>
                     <p><strong>Note:</strong> This game is only available to download on Windows or MacOS. It is not available to try online.</p>
                     <a href="projects/star-hunter.html" class="btn btn-default btn-lg">Learn More</a>
