--- a/projects.html
+++ b/projects.html
@@ -140,7 +140,7 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center"> <strong>DJ App</strong> Audio application - Student Project</h2>
+                    <h2 class="intro-text text-center"> <strong>Ottodecks</strong> Audio application - Student Project</h2>
                     <h2 class="intro-text text-center"> <strong>C++ | Audio Programming | JUCE</strong></h2>
                     <hr>
                     <a href="projects/ottodecks-dj-app.html">
@@ -159,7 +159,7 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center"> <strong>2D Platformer</strong> - Student Project</h2>
+                    <h2 class="intro-text text-center"> <strong>2D Platformer Game</strong> - Student Project</h2>
                     <h2 class="intro-text text-center"> <strong>JavaScript, Tiled, NPM | Game Dev | Agile</strong></h2>
                     <hr>
                     <a href="projects/2d-platformer.html">
@@ -167,7 +167,8 @@
                     </a>
                     <hr class="visible-xs">
                     <p>Released September 2022</p>
-                    <p>Navigate each carefully crafted level while fighting you way through enemies and jumping on platforms!</p>
+                    <p>A 2D platformer game where you must navigate each carefully crafted level while fighting you way
+                    through enemies and jumping on platforms!</p>
                     <a href="projects/2d-platformer.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
@@ -197,16 +198,16 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center"> <strong>Smart Home</strong> Front and Backend - Student Project</h2>
-                    <h2 class="intro-text text-center"> <strong>HTML | CSS | JavaScript | NodeJS | SQL | EJS
-                        Front and Backend Development</strong></h2>
+                    <h2 class="intro-text text-center"> <strong>Smart Home</strong> Dynamic Web App - Student Project</h2>
+                    <h2 class="intro-text text-center"> <strong>HTML | CSS | JavaScript | NodeJS | Express | EJS | SQL</strong></h2>
+                    <h2 class="intro-text text-center"> <strong>Front and Backend Development</strong></h2>
                     <hr>
                     <a href="projects/smart-home.html">
                         <img class="img-responsive img-border img-left" src="assets/img/projects/smart-home/add device.png" alt="">
                     </a>
                     <hr class="visible-xs">
-                    <p>Released March 2022</p>
-                    <p>An image processing tool that allows a user to blend multiple faces together</p>
+                    <p>Released September 2022</p>
+                    <p>A dynamic web application allowing users to monitor and control devices in their smart home.<p>
                     <a href="projects/smart-home.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
