--- a/projects/2d-platformer.html
+++ b/projects/2d-platformer.html
@@ -102,10 +102,10 @@
                          of Zelda for its health system. It is fully responsive scaling with different screen sizes, and incorporates 
                          aspects such as raycasting, animation, scene management, input and movement controls, player knockbacks, and enemies
                           patrolling separately.</p>
-                    <p>This was a group project made for University of London's Agile Software Development class. The course was designed 
+                    <p>This was a group project made for University of London's Agile Software Development module. The course was designed 
                         more for learning how to write reports and collaborating within a team rather than learning new programming methods.
                          However, due to a lack of support from other teammates, I designed and programmed 100% of the game.</p>
-                    <p>Over 2 months, I researched and programmed everything from scratch in Phaser.js, Tiled, and built and deployed it onto
+                    <p>Over 2 months, I researched and programmed everything from the ground up in Phaser.js, Tiled, and built and deployed it onto
                         GitHub through NPM. At the time, I had never worked with any of these projects before, and it was a great learning 
                         experience.</p>
                     
