--- a/projects/instagram-filter.html
+++ b/projects/instagram-filter.html
@@ -88,7 +88,6 @@
                     <p class="intro-text text-center">
                         Released March 2022</br />
                         Student Solo Graphics Programming Project<br />
-                        <strong>Role: </strong> Solo Developer
                     </p> 
 
                     <a href="../assets/img/projects/Instagram Filter/Instagram Filter - SepiaBlur.png">
@@ -112,26 +111,27 @@
 
                     <hr class="visible-xs">
 
-                    <p> This is an image processing tool that allows you to apply 10 different filters to a preset image. It
+                    <p>This is an image processing tool that allows you to apply 10 different filters to a preset image. It
                         contains a border, vignette, and a radial blur, as well as sliders and checkboxes to allow the
                         user to adjust the image. </p>
-                    <p>This is a tool I made for a graphics programming course at the University of London using p5.js from scratch. The image on the
+                    <p>It is a tool I made for a graphics programming course at the University of London using p5.js from the ground up. The image on the
                         left is copied and displayed on the right. Then each filter is created by looping over every pixel in the copied image and,
                         applies a function using a specific matrix to change the red, green, blue, and alpha values of each pixel.</p>
 
-                    <p><strong>Features include:</strong></p>
-                    <ul>
-                        <li>Able to switch between 10 filters</li>
-                        <li>Multiple sliders to dynamically change effects</li>
-                        <li>The threshold value can be changed for the threshold filter</li>
-                        <li>The border can be adjusted</li>
-                        <li>Blur can be toggled on or off - recommend toggling off to speed up</li>
-                          program and see other filters and sliders update quicker
-                        <li>Blur size can be changed with the min and max sliders</li>
-                        <li>Different color effects can be created by changing the red, green
-                          blue, and alpha values when blur is turned on. I like turning on the
-                          edge detect filter, and having red 1, green 2, blue 3 for instance</li>
-                    </ul>
+                    <p><strong>Features include:</strong>
+                        <ul>
+                            <li>Able to switch between 10 filters</li>
+                            <li>Multiple sliders to dynamically change effects</li>
+                            <li>The threshold value can be changed for the threshold filter</li>
+                            <li>The border can be adjusted</li>
+                            <li>Blur can be toggled on or off - recommend toggling off to speed up</li>
+                            program and see other filters and sliders update quicker
+                            <li>Blur size can be changed with the min and max sliders</li>
+                            <li>Different color effects can be created by changing the red, green
+                            blue, and alpha values when blur is turned on. I like turning on the
+                            edge detect filter, and having red 1, green 2, blue 3 for instance</li>
+                        </ul>
+                    </p>
 
                     <p><strong>Technologies used:</strong>
                         <ul>
