--- a/projects/ottodecks-dj-app.html
+++ b/projects/ottodecks-dj-app.html
@@ -82,13 +82,12 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">
-                        <strong>DJ App</strong> - Audio Manipulation Program
+                        <strong>Ottodecks</strong> - Audio Manipulation Program
                     </h2>
                     <hr>
                     <p class="intro-text text-center">
                         Released March 2022</br />
                         Student Solo Object Oriented Programming Project<br />
-                        <strong>Role: </strong> Solo Developer/Audio Programmer
                     </p> 
 
                     <a href="../assets/img/projects/Ottodecks/Ottodecks Volume Up.png">
@@ -106,24 +105,25 @@
 
                     <hr class="visible-xs">
 
-                    <p> This is an audio application that allows you to manipulate music tracks as a DJ would. </p>
-                    <p>This is a program I made for an object oriented programming course at the University of London using C++ and the JUCE library. I 
+                    <p>This is an audio application that allows you to manipulate music tracks as a DJ would. </p>
+                    <p>I was the sole developer on this project, which was for an object oriented programming course at the University of London using C++ and the JUCE library. I 
                         extended the application beyond the class requirements by improving the GUI including two DJ decks, sliders, buttons, a volume and speed
                         control, and the ability to scroll through each track by displaying it as a waveform.</p>
-                    <p> It contains multiple classes with constructors that interact with one another, references, pointers, and header files for each cpp file.
+                    <p>It contains multiple classes with constructors that interact with one another, references, pointers, and header files for each cpp file.
 
-                    <p><strong>Features include:</strong></p>
-                    <ul>
-                        <li>creating a playlist by loading audio files into it</li>
-                        <li>uploading a separate music track from the playlist onto each of the two deck instances for manipulation</li>
-                        <li>functionality to change the volume and speed of each track playing</li>
-                        <li>functionality to change the speed of each track playing</li>
-                        <li>the ability to scroll through a track that's loaded onto a deck</li>
-                        <li>search the playlist for a particular track</li>
-                        <li>add or delete tracks from the playlist</li>
-                        <li>independently Play, Pause, Stop, or Reset a track that's loaddd onto a deck</li>
-                        <li>view the the name and length of each track that is playing in seconds.</li>
-                    </ul>
+                    <p><strong>Features include:</strong>
+                        <ul>
+                            <li>creating a playlist by loading audio files into it</li>
+                            <li>uploading a separate music track from the playlist onto each of the two deck instances for manipulation</li>
+                            <li>functionality to change the volume and speed of each track playing</li>
+                            <li>functionality to change the speed of each track playing</li>
+                            <li>the ability to scroll through a track that's loaded onto a deck</li>
+                            <li>search the playlist for a particular track</li>
+                            <li>add or delete tracks from the playlist</li>
+                            <li>independently Play, Pause, Stop, or Reset a track that's loaddd onto a deck</li>
+                            <li>view the the name and length of each track that is playing in seconds.</li>
+                        </ul>
+                    </p>
 
                     <p><strong>Technologies used:</strong>
                         <ul>
