--- a/projects/smart-home.html
+++ b/projects/smart-home.html
@@ -87,8 +87,7 @@
                     <hr>
                     <p class="intro-text text-center">
                         Released September 2022</br />
-                        Student Solo Front and Backend Web Project<br />
-                        <strong>Role: </strong> Solo Front and Backend Developer
+                        Student Front and Backend Web Project<br />
                     </p> 
                     <a href="../assets/img/projects/smart-home/add device.png">
                         <img class="img-responsive img-border img-left" src="../assets/img/projects/smart-home/add device.png" alt="">
@@ -96,30 +95,53 @@
                     <a href="../assets/img/projects/smart-home/list devices.png">
                         <img class="img-responsive img-border img-left" src="../assets/img/projects/smart-home/list devices.png" alt="">
                     </a>
-                    <a href="../assets/img/projects/smart-home/seach devices.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/smart-home/seach devices.png" alt="">
+                    <a href="../assets/img/projects/smart-home/search devices.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/smart-home/search devices.png" alt="">
+                    </a>
+                    <a href="../assets/img/projects/smart-home/list searched device.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/smart-home/list searched device.png" alt="">
+                    </a>
+                    <a href="../assets/img/projects/smart-home/remove device.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/smart-home/remove device.png" alt="">
                     </a>
 
                     <hr class="visible-xs">
 
-                    <p>Smart Home</p>
-                    <p>This is a solo project made for University of London's Databases, Networks, and the Web class.</p>
-                    <p><strong>Game features</strong> will include:</p>
+                    <p>This is a dynamic web application that allows users to monitor and control devices in their smart home.</p>
+                    <p>I was the sole developer on this project, which was for University of London's Databases, Networks, and the Web module. I designed
+                        the frontend, backend, and middleware with an API using HTML, CSS, JavaScript, NodeJS, Express, EJS
+                        templates, SQL, and a MySQL RDBMS.</p>
+                    <p>When adding a device, the user can specify different properties such as the type of device, its name, status,
+                        and settings. The user can also update the device, search for it and then list all devices with that name,
+                        and even update its properties. All data is stored on a local MySQL server, and the application establishes
+                        a connection with that server when the program is started. Further it contains appropriate use of GET and POST
+                        HTTP methods to request and send data securely.</p>
                     
-                    <ul>
-                    </ul>
-
-                    <p><strong>Technologies used:</strong>
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JavaScript</li>
-                        <li>NodeJS</li>
-                        <li>EJS</li>
-                        <li>SQL, MySQL</li>
-                    </ul>
+                    <p><strong>Features include:</strong>
+                        <ul>
+                            <li>Add a device</li>                    
+                            <li>Update a device</li>
+                            <li>Remove a device</li>
+                            <li>Search for a device by its name</li>
+                            <li>List all devices</li>
+                            <li>A home and about page</li>
+                        </ul>
                     </p>
 
+                    <p><strong>Technologies used:</strong>
+                        <ul >
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>NodeJS</li>
+                            <li>Express</li>
+                            <li>EJS</li>
+                            <li>SQL</li>
+                            <li>MySQL</li>
+                        </ul>
+                    </p>
+
+                    <p><strong>This application cannot be viewed online as it has to be connected to a server.</strong></p>
                     <p><strong>Note:</strong> For this particular university project, I am unable to show my code to the public due to plagiarism
                         concerns. If you would like to see the code for this, please <a href="../contact.html"><strong>contact</strong></a> me.</p>
                 </div>
