--- a/projects/still-life.html
+++ b/projects/still-life.html
@@ -87,8 +87,7 @@
                     <hr>
                     <p class="intro-text text-center">
                         Released February 2023</br />
-                        Personal Project Showcasing 3D Graphics Skills<br />
-                        <strong>Role: </strong> Solo Graphics Engineer
+                        Personal Project Showcasing 3D Graphics Engineering Skills<br />
                     </p> 
                     <a href="../assets/img/projects/Star Hunter/Star Hunter 1.png">
                         <img class="img-responsive img-border img-left" src="../assets/img/projects/Star Hunter/Star Hunter 1.png" alt="">
@@ -99,20 +98,20 @@
                     <p>This is a personal project made to showcase my current skills with 3D graphics, shaders, and physical based rendering. 
                         The scene showcases a variety of objects with different effects or shaders applied to each of them. All assets are from Unity's Creative Core Pathway. It viewable online below.</p>
 
-                    <p><strong>Scene features</strong> include:</p>
-                    
-                    <ul>
-                        <li>
+                    <p><strong>Scene features</strong> include:                
+                        <ul>
+                            <li>
 
-                        </li>
-                    </ul>
+                            </li>
+                        </ul>
+                    </p>
 
                     <p><strong>Technologies used:</strong>
-                    <ul>
-                        <li>C#</li>
-                        <li>Unity 2020.3.6</li>
-                        <li>Shader Graph</li>
-                    </ul>
+                        <ul>
+                            <li>C#</li>
+                            <li>Unity 2020.3.6</li>
+                            <li>Shader Graph</li>
+                        </ul>
                     </p>
 
                     <a href="https://samsherrod.github.io/2D-Platformer/website/" target="_blank" class="btn btn-default btn-lg">Play Game Online</a>
