--- a/projects/red-knight.html
+++ b/projects/red-knight.html
@@ -100,7 +100,7 @@
                         It is currently in development being built by myself and 3 other students with the Unity game engine.
                          It is inspired by games such as Megaman and Enter the Gungeon. A unique aspect of the it is that it 
                          is both a 2D action platformer and a top down action game similar to Zelda II: The Adventure of Link.</p>
-                    <p>This is a group project made for University of London's Game Development class. The game will be finished 
+                    <p>This is a group project made for University of London's Game Development module. The game will be finished 
                          and playable on WebGL in March 2023.</p>
 
                     <p>I have more experience with Unity than the rest of my team, and my role in the development phase has mainly
