--- a/projects/star-hunter.html
+++ b/projects/star-hunter.html
@@ -88,7 +88,6 @@
                     <p class="intro-text text-center">
                         In Development - Expected Release March 2023</br />
                         Student Solo Virtual Reality Project<br />
-                        <strong>Role: </strong> Solo VR Developer
                     </p> 
                     <a href="../assets/img/projects/Star Hunter/Star Hunter 1.png">
                         <img class="img-responsive img-border img-left" src="../assets/img/projects/Star Hunter/Star Hunter 1.png" alt="">
@@ -107,35 +106,35 @@
 
                     <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.
                         When all of the stars are connected, an image will be shown, and the next set of stars will be displayed in the sky. 
-                        It is currently in development built solely by myself. I'm very interested in the field of virtual reality, and have
-                        thoroughly enjoyed working on this project. It is made in the Unity game engine using Unity's XR Toolkit, and is tested
-                        for the Meta Quest 2.</p>
-                    <p>This is a solo project made for University of London's Virtual Reality  class. The game will be finished and 
+                        I'm very interested in the field of virtual reality, and have thoroughly enjoyed working on this project. It is made
+                        in the Unity game engine using Unity's XR Toolkit, and is tested for the Meta Quest 2.</p>
+                    <p>I am the sole developer on this project, which is for University of London's Virtual Reality module. The game will be finished and 
                         playable on Windows, Mac, WebGL, and the Meta Quest 2 in March 2023.</p>
-                    <p><strong>Game features</strong> will include:</p>
-                    
-                    <ul>
-                        <li>a working virtual bow and arrow with precise aiming</li>
-                        <li>virtual hands that move and animate with the player's hands</li>
-                        <li>bow is attached to the front of the body, and the arrows are in a quiver attached to the back of the player</li>
-                        <li>customizable menu options including the ability to toggle moving with the joystick or teleport, adjusting the height
-                            and size of the player's virtual body</li>
-                        <li>a virtual menu</li>
-                        <li>unlimited arrows</li>
-                        <li>a large open area of grass to move around in</li>
-                        <li>a nighttime sky</li>
-                    </ul>
+
+                    <p><strong>Game features</strong> will include:
+                        <ul>
+                            <li>a working virtual bow and arrow with precise aiming</li>
+                            <li>virtual hands that move and animate with the player's hands</li>
+                            <li>bow is attached to the front of the body, and the arrows are in a quiver attached to the back of the player</li>
+                            <li>customizable menu options including the ability to toggle moving with the joystick or teleport, adjusting the height
+                                and size of the player's virtual body</li>
+                            <li>a virtual menu</li>
+                            <li>unlimited arrows</li>
+                            <li>a large open area of grass to move around in</li>
+                            <li>a nighttime sky</li>
+                        </ul>
+                    </p>
 
                     <p><strong>Technologies used:</strong>
-                    <ul>
-                        <li>C#</li>
-                        <li>Unity 2019.4.40f1</li>
-                        <li>Unity Package - XR Interaction Toolkit 0.9.4-preview</li>
-                        <li>Unity Package- Occulus XR Plugin 1.6.1</li>
-                        <li>Unity Package- XR Plugin Management 4.3.1</li>
-                        <li>Mesh for bow and arrow came from Steam VR</li>
-                        <li>Virtual hand models</li>
-                    </ul>
+                        <ul>
+                            <li>C#</li>
+                            <li>Unity 2019.4.40f1</li>
+                            <li>Unity Package - XR Interaction Toolkit 0.9.4-preview</li>
+                            <li>Unity Package- Occulus XR Plugin 1.6.1</li>
+                            <li>Unity Package- XR Plugin Management 4.3.1</li>
+                            <li>Mesh for bow and arrow came from Steam VR</li>
+                            <li>Virtual hand models</li>
+                        </ul>
                     </p>
 
                     <p><strong>Note:</strong> This game is only available to download on Windows or MacOS. It is not available to try online.</p>
