Add shader-demo.html, add shader pics, change shader page descriptions

--- a/projects.html
+++ b/projects.html
@@ -77,6 +77,26 @@
 
     <div class="container">
 
+        <!-- Shader Demo -->
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center"> <strong>Shader Demo</strong> - Personal Project</h2>
+                    <h2 class="intro-text text-center"> <strong>Graphics Programming | Unity | Shaders </strong></h2>
+                    <hr>
+                    <a href="projects/shader-demo.html">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/Shader Demo/Hologram Shader.png" alt="">
+                    </a>
+                    <hr class="visible-xs">
+                    <p>February 2023</p>
+                    <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.</p>
+                    <a href="projects/still-life.html" class="btn btn-default btn-lg">Read More</a>
+                </div>
+            </div>
+        </div>
+
+
         <!-- 2D Platformer -->
         <div class="row">
             <div class="box">
@@ -112,25 +132,6 @@
                     <p>Released March 2022</p>
                     <p>A DJ application that allows a user to add music tracks to a playlist, upload selected tracks onto 2 separate decks, and manipulate them as a DJ would.</p>
                     <a href="projects/ottodecks-dj-app.html" class="btn btn-default btn-lg">Read More</a>
-                </div>
-            </div>
-        </div>
-
-        <!-- Still Life -->
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center"> <strong>Still Life Composition</strong> Bow and Arrow VR Project - Personal Project</h2>
-                    <h2 class="intro-text text-center"> <strong>Graphics Programming | Unity | Shaders </strong></h2>
-                    <hr>
-                    <a href="projects/still-life.html">
-                        <img class="img-responsive img-border img-left" src="assets/img/projects/Star Hunter/Star Hunter 1.png" alt="">
-                    </a>
-                    <hr class="visible-xs">
-                    <p>February 2023</p>
-                    <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.</p>
-                    <a href="projects/still-life.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
         </div>
