--- a/projects/shader-demo.html
+++ b/projects/shader-demo.html
@@ -82,40 +82,67 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">
-                        <strong>Still Life Composition</strong> - 3D Art Scene
+                        <strong>Shader Demo</strong> - 3D Art Scene
                     </h2>
                     <hr>
                     <p class="intro-text text-center">
                         Released February 2023</br />
-                        Personal Project Showcasing 3D Graphics Engineering Skills<br />
+                        Personal Project Showcasing 3D Graphics Engineering and Shader Skills<br />
                     </p> 
-                    <a href="../assets/img/projects/Star Hunter/Star Hunter 1.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Star Hunter/Star Hunter 1.png" alt="">
+                    <a href="../assets/img/projects/Shader Demo/Hologram Shader.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Hologram Shader.png" alt="">
+                    </a>
+                    <a href="../assets/img/projects/Shader Demo/Force Field Shader.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Force Field Shader.png" alt="">
+                    </a>
+                    <a href="../assets/img/projects/Shader Demo/Cartoon Water Shader.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Cartoon Water Shader.png" alt="">
+                    </a>
+                    <a href="../assets/img/projects/Shader Demo/Kite Shader.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Kite Shader.png" alt="">
+                    </a>
+                    <a href="../assets/img/projects/Shader Demo/Shimmer Shader.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Shimmer Shader.png" alt="">
+                    </a>
+                    <a href="../assets/img/projects/Shader Demo/Fresnel Glow Shader.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Fresnel Glow Shader.png" alt="">
+                    </a>
+                    <a href="../assets/img/projects/Shader Demo/Gradient Shader.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Gradient Shader.png" alt="">
+                    </a>
+                    <a href="../assets/img/projects/Shader Demo/Texture Subtraction Shader.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Texture Subtraction Shader.png" alt="">
                     </a>
 
                     <hr class="visible-xs">
 
                     <p>This is a personal project made to showcase my current skills with 3D graphics, shaders, and physical based rendering. 
-                        The scene showcases a variety of objects with different effects or shaders applied to each of them. All assets are from Unity's Creative Core Pathway. It viewable online below.</p>
+                        The scene showcases a variety of objects with different effects or shaders applied to each of them.</p>
+                    <p>Click below to view the demo online. It is recommended to view it on a computer and not on a phone.</p>
 
                     <p><strong>Scene features</strong> include:                
                         <ul>
-                            <li>
-
-                            </li>
+                            <li>Hologram Shader</li>
+                            <li>Force Field Shader</li>
+                            <li>Cartoon Water Shader</li>
+                            <li>Kite Shader</li>
+                            <li>Shimmer Shader</li>
+                            <li>Fresnel Glow Shader</li>
+                            <li>Gradient Shader</li>
+                            <li>Texture Subtraction Shader</li>
                         </ul>
                     </p>
 
                     <p><strong>Technologies used:</strong>
                         <ul>
                             <li>C#</li>
-                            <li>Unity 2020.3.6</li>
+                            <li>Unity 2020.3</li>
                             <li>Shader Graph</li>
                         </ul>
                     </p>
 
-                    <a href="https://samsherrod.github.io/2D-Platformer/website/" target="_blank" class="btn btn-default btn-lg">Play Game Online</a>
-                </div>
+                    <a href="https://samsherrod.itch.io/shader-demo" target="_blank" class="btn btn-default btn-lg">Play Game Online</a>
+                    <!-- <a href="https://github.com/samsherrod/shader-demo" target="_blank" class="btn btn-default btn-lg">View Source Code</a> -->
             </div>
         </div>
     </div>
