--- a/index.html
+++ b/index.html
@@ -88,11 +88,15 @@
                             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="3"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="5"></li>
                         </ol>
 
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
+                                <img class="img-responsive img-full" src="assets/img/projects/Shader Demo/Hologram Shader.png" alt="">
+                            </div>
+                            <div class="item">
                                 <img class="img-responsive img-full" src="assets/img/projects/Red Knight/red-knight-prototype-img.png" alt="">
                             </div>
                             <div class="item">
