Adjust shader and project pages text

--- a/projects.html
+++ b/projects.html
@@ -91,7 +91,7 @@
                     <hr class="visible-xs">
                     <p>February 2023</p>
                     <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.</p>
-                    <a href="projects/still-life.html" class="btn btn-default btn-lg">Read More</a>
+                    <a href="projects/shader-demo.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
         </div>
