--- a/projects/shader-demo.html
+++ b/projects/shader-demo.html
@@ -141,7 +141,7 @@
                         </ul>
                     </p>
 
-                    <a href="https://samsherrod.itch.io/shader-demo" target="_blank" class="btn btn-default btn-lg">Play Game Online</a>
+                    <a href="https://samsherrod.itch.io/shader-demo" target="_blank" class="btn btn-default btn-lg">View Demo Online</a>
                     <!-- <a href="https://github.com/samsherrod/shader-demo" target="_blank" class="btn btn-default btn-lg">View Source Code</a> -->
             </div>
         </div>
