Adjust shader text content

--- a/projects/shader-demo.html
+++ b/projects/shader-demo.html
@@ -117,7 +117,9 @@
                     <hr class="visible-xs">
 
                     <p>This is a personal project made to showcase my current skills with 3D graphics, shaders, and physical based rendering. 
-                        The scene showcases a variety of objects with different effects or shaders applied to each of them.</p>
+                        The scene showcases a variety of objects with different effects or shaders applied to each of them. It was created using
+                        Unity's Universal Render Pipeline, Shader Graph, and HLSL.</p>
+                    <p>Within the Unity Editor, there are multiple properties exposed for each shader so that artists can adjust.</p>
                     <p>Click below to view the demo online. It is recommended to view it on a computer and not on a phone.</p>
 
                     <p><strong>Scene features</strong> include:                
@@ -137,6 +139,7 @@
                         <ul>
                             <li>C#</li>
                             <li>Unity 2020.3</li>
+                            <li>Unity's Universal Render Pipeline 10.4</li>
                             <li>Shader Graph</li>
                         </ul>
                     </p>
