--- a/projects.html
+++ b/projects.html
@@ -90,7 +90,8 @@
                     </a>
                     <hr class="visible-xs">
                     <p>February 2023</p>
-                    <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.</p>
+                    <p>A demo showcasing a range of diffeent custom shaders I created using Unity's Universal Render Pipeline, Shader Graph,
+                        and HLSL.</p>
                     <a href="projects/shader-demo.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
