Update title of shader-demo.html

--- a/projects/shader-demo.html
+++ b/projects/shader-demo.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Still Life - Sam Sherrod</title>
+    <title>Shader Demo - Sam Sherrod</title>
     <link rel="icon" type="image/x-icon" href="../assets/img/about/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
