Update shader-demo.html content

--- a/projects/shader-demo.html
+++ b/projects/shader-demo.html
@@ -120,7 +120,7 @@
                         The scene showcases a variety of objects with different effects or shaders applied to each of them. It was created using
                         Unity's Universal Render Pipeline, Shader Graph, and HLSL.</p>
                     <p>Within the Unity Editor, there are multiple properties exposed for each shader so that artists can adjust.</p>
-                    <p>Click below to view the demo online. It is recommended to view it on a computer and not on a phone.</p>
+                    <p>Click below to view the demo online. For best results, view on a computer.</p>
 
                     <p><strong>Scene features</strong> include:                
                         <ul>
