Change Shader Demo pictures, and update content

--- a/projects/shader-demo.html
+++ b/projects/shader-demo.html
@@ -87,10 +87,16 @@
                     <hr>
                     <p class="intro-text text-center">
                         Released February 2023</br />
-                        Personal Project Showcasing 3D Graphics Engineering and Shader Skills<br />
+                        Personal Project Showcasing 3D Graphics Programming and Shader Skills in HLSL and Unity's Shader Graph<br />
                     </p> 
                     <a href="../assets/img/projects/Shader Demo/Hologram Shader.png">
                         <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Hologram Shader.png" alt="">
+                    </a>
+                    <a href="../assets/img/projects/Shader Demo/3D Disolve Shader.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/3D Disolve Shader.png" alt="">
+                    </a>
+                    <a href="../assets/img/projects/Shader Demo/2D Disolve Shader.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/2D Disolve Shader.png" alt="">
                     </a>
                     <a href="../assets/img/projects/Shader Demo/Force Field Shader.png">
                         <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Force Field Shader.png" alt="">
@@ -98,17 +104,17 @@
                     <a href="../assets/img/projects/Shader Demo/Cartoon Water Shader.png">
                         <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Cartoon Water Shader.png" alt="">
                     </a>
-                    <a href="../assets/img/projects/Shader Demo/Kite Shader.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Kite Shader.png" alt="">
+                    <a href="../assets/img/projects/Shader Demo/Fresnel Glow Shader.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Fresnel Glow Shader.png" alt="">
                     </a>
                     <a href="../assets/img/projects/Shader Demo/Shimmer Shader.png">
                         <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Shimmer Shader.png" alt="">
                     </a>
-                    <a href="../assets/img/projects/Shader Demo/Fresnel Glow Shader.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Fresnel Glow Shader.png" alt="">
-                    </a>
                     <a href="../assets/img/projects/Shader Demo/Gradient Shader.png">
                         <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Gradient Shader.png" alt="">
+                    </a>
+                    <a href="../assets/img/projects/Shader Demo/2D Offset Position Shader.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/2D Offset Position Shader.png" alt="">
                     </a>
                     <a href="../assets/img/projects/Shader Demo/Texture Subtraction Shader.png">
                         <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Texture Subtraction Shader.png" alt="">
@@ -125,24 +131,32 @@
                     <p><strong>Scene features</strong> include:                
                         <ul>
                             <li>Hologram Shader</li>
-                            <li>Force Field Shader</li>
-                            <li>Cartoon Water Shader</li>
-                            <li>Kite Shader</li>
-                            <li>Shimmer Shader</li>
+                            <li>Dissolve Shader with different smoothness values</li>
+                            <li>2D Dissolve Shader with a slider to adjust fade amount</li>
+                            <li>Force Field Shader with different emission colors</li>
+                            <li>Cartoon Water Shader with noise and normal vectors changed</li>
                             <li>Fresnel Glow Shader</li>
+                            <li>Shimmer Shader</li>
                             <li>Gradient Shader</li>
-                            <li>Texture Subtraction Shader</li>
+                            <li>2D Offset Position Shader</li>
+                            <li>Texture Subtraction Shader with different base colors</li>
                         </ul>
                     </p>
 
                     <p><strong>Technologies used:</strong>
                         <ul>
-                            <li>C#</li>
+                            <li>HLSL, C#</li>
                             <li>Unity 2020.3</li>
                             <li>Unity's Universal Render Pipeline 10.4</li>
                             <li>Shader Graph</li>
                         </ul>
                     </p>
+
+                    <p><strong>Assets used:</strong></p>
+                        <ul>
+                            <li><a href="https://storymirror.com/read/english/story/kittu-s-kite/x6qk3v1r">Kittu's Kite</a></li>
+                            <li><a href="https://assetstore.unity.com/packages/essentials/starter-assets-third-person-character-controller-196526">Unity's Third Person Character Controller</a></li>
+                        </ul>
 
                     <a href="https://samsherrod.itch.io/shader-demo" target="_blank" class="btn btn-default btn-lg">View Demo Online</a>
                     <!-- <a href="https://github.com/samsherrod/shader-demo" target="_blank" class="btn btn-default btn-lg">View Source Code</a> -->
