Update shader-demo.html content

--- a/projects/shader-demo.html
+++ b/projects/shader-demo.html
@@ -87,7 +87,7 @@
                     <hr>
                     <p class="intro-text text-center">
                         Released February 2023</br />
-                        Personal Project Showcasing 3D Graphics Programming and Shader Skills in HLSL and Unity's Shader Graph<br />
+                        Personal Project Showcasing 3D Graphics Programming and Shader Skills<br />
                     </p> 
                     <a href="../assets/img/projects/Shader Demo/Hologram Shader.png">
                         <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Hologram Shader.png" alt="">
